# litegpt

./: .gitignore  pyproject.toml  requirements.txt
litegpt/: __init__.py  config.py  dataset.py  model.py  tokenizer.py
